- Detailed Design for FAQs

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -42,6 +42,7 @@ $bannerMaskGreen: #00cfcc;
 $corporateContentGreen: #026867;
 
 $textGrey: #757575;
+$textDarkGrey: #1d1d1d;
 $bgGrey: #ECECEC;
 
 // Snap design variables
