Your rigths ppage complete

--- a/resources/sass/_global.scss
+++ b/resources/sass/_global.scss
@@ -567,6 +567,7 @@ path {
 .border {
     &-right {
         &.border-green {
+            border-right: 0 !important;
             border-bottom: 2px solid $turq !important;
 
             @include media-breakpoint-up(md) {
