--- a/resources/sass/layout/_footer.scss
+++ b/resources/sass/layout/_footer.scss
@@ -122,7 +122,7 @@ footer {
         &.draw {
             svg {
                 path {
-                    animation: drawsvg 8s ease-in;
+                    animation: drawheart 8s ease-in;
                     //animation-delay: 1s;
                     animation-fill-mode: forwards;
                 }
