--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -59,7 +59,7 @@
 //@import 'mobile/components/solutionsMobile';
 @import 'components/form';
 @import 'components/accordion';
-@import 'components/doctor';
+//@import 'components/doctor';
 @import 'components/modal';
 
 // BASIC COMPONENTS
