--- a/resources/sass/pages/_resultsPage.scss
+++ b/resources/sass/pages/_resultsPage.scss
@@ -428,7 +428,7 @@
 
         &:hover,
         &:active {
-            color: $turq;
+            color: $brand-1;
             text-decoration: none;
         }
     }
