--- a/resources/sass/components/_doctor.scss
+++ b/resources/sass/components/_doctor.scss
@@ -1,16 +1,16 @@
-#doctor {
-    @include v-c(fixed);
-    z-index: 5;
-    right: 0;
-    background-color: $doctorGreen;
-    width: 150px;
-    padding: 20px 12px 20px 20px;
-    border-radius: 10px 0 0 10px;
-    cursor: pointer;
-
-    img {
-        position: absolute;
-        left: 5px;
-        bottom: calc(100% - 10px);
-    }
-}
+//#doctor {
+//    @include v-c(fixed);
+//    z-index: 5;
+//    right: 0;
+//    background-color: #000;
+//    width: 150px;
+//    padding: 20px 12px 20px 20px;
+//    border-radius: 10px 0 0 10px;
+//    cursor: pointer;
+//
+//    img {
+//        position: absolute;
+//        left: 5px;
+//        bottom: calc(100% - 10px);
+//    }
+//}
