--- a/resources/sass/layout/_blog.scss
+++ b/resources/sass/layout/_blog.scss
@@ -163,7 +163,7 @@
 
             &:hover {
                 svg path {
-                    fill: $turq;
+                    fill: $brand-1;
                 }
             }
         }
