--- a/resources/sass/pages/_yourRights.scss
+++ b/resources/sass/pages/_yourRights.scss
@@ -24,5 +24,5 @@
     background-image: url('/images/banner-flipped.jpg');
     background-size: cover;
     background-repeat: no-repeat;
-    @include mask($turq, 0.06)
+    @include mask($brand-1, 0.06)
 }
