--- a/resources/sass/layout/_blog.scss
+++ b/resources/sass/layout/_blog.scss
@@ -56,15 +56,22 @@
                 }
 
                 .blog-item-category {
-                    width: 30px;
-                    height: 30px;
-                    top: 30px;
-                    right: 30px;
+                    width: 50px;
+                    height: 50px;
+                    top: 15px;
+                    right: 15px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+
+                    svg {
+                        height: 18px;
+                        width: 18px;
+                    }
                 }
             }
 
             .blog-item-content {
-                padding: 20px;
                 .title {
                     @include font-size(20);
                     line-height: 24px;
