--- a/resources/sass/pages/_resultsPage.scss
+++ b/resources/sass/pages/_resultsPage.scss
@@ -363,6 +363,10 @@
                 transform: rotateX(180deg);
             }
 
+            &.highlight {
+                color: $turq;
+            }
+
             p {
                 @extend .SofiaPro-Medium;
                 white-space: nowrap;
