Mobile result item closed styling

--- a/resources/sass/_global.scss
+++ b/resources/sass/_global.scss
@@ -446,7 +446,7 @@ select.big {
     .cc-btn {
         @extend .btn;
         //@extend .btn-m;
-        @extend .btn-turq;
+        @extend .btn-brand-1;
         @extend .btn-squared;
         @include font-size(1.1rem, true);
         text-align: center !important;
