--- a/resources/sass/components/basic/_button.scss
+++ b/resources/sass/components/basic/_button.scss
@@ -31,7 +31,7 @@
     }
 
     //colours
-    &.btn-turq {
+    &.btn-brand-1 {
         background-color: $brand-1;
 
         &:hover {
@@ -134,6 +134,17 @@
                     stroke: $pink;
                     fill: $pink;
                 }
+            }
+        }
+
+        &.btn-compare-mobile {
+            padding: 0 0 0 30px !important;
+            top: 0;
+            right: 0;
+
+            svg {
+                width: 15px;
+                height: 13px;
             }
         }
     }
@@ -392,18 +403,14 @@
 
         &_mobile {
             color: $pink;
-            //&:after {
-            //    content: '';
-            //    position: absolute;
-            //    left: 100%;
-            //    top: 0;
-            //    width: 30px;
-            //    height: 30px;
-            //    border-bottom: solid 15px transparent;
-            //    border-right: solid 15px transparent;
-            //    border-left: solid 15px $pink;
-            //    border-top: solid 15px $pink;
-            //}
+            text-decoration: none;
+            padding-left: 30px;
+
+            svg {
+                //position: static !important;
+                //display: inline-block;
+                width: 15px;
+            }
         }
     }
 
@@ -485,7 +492,7 @@
     }
 }
 
-.btn-turq-link {
+.btn-brand-1-link {
     color: $brand-1;
 
     &:hover,
