Update icon colours to trunkie blue

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -43,7 +43,7 @@ $brand-6: #037098;
 //Main Template colours
 $footerBackgroundColour: #363636;
 $caretBlack: #040202;
-$bannerMaskGreen: #00cfcc;
+$bannerMaskGreen: #037098;
 $corporateContentGreen: #026867;
 
 $textGrey: #757575;
