--- a/resources/sass/pages/_aboutUs.scss
+++ b/resources/sass/pages/_aboutUs.scss
@@ -48,7 +48,7 @@
 
     // Swirl animation
     .svg-wrapper {
-        svg .swirl-path {
+        svg path {
             fill: none;
             stroke: $brand-1;
             stroke-width: 1px;
@@ -58,7 +58,7 @@
 
         &.draw {
             svg {
-                .swirl-path {
+                path {
                     animation: drawswirl 3s linear;
                     animation-fill-mode: forwards;
                 }
@@ -69,7 +69,7 @@
 
 .about-us-intro {
     border-bottom: $greyBorder;
-    @include media-breakpoint-up(md) {
+    @include media-breakpoint-up(lg) {
         background-image: url('/images/layer_16.png');
         background-size: contain;
         background-repeat: no-repeat;
