Help links changed to 'i' from '?'

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -45,6 +45,7 @@ $footerBackgroundColour: #363636;
 $caretBlack: #040202;
 $bannerMaskGreen: #037098;
 $corporateContentGreen: #026867;
+$header-link-hover-colour: darken($brand-1, 10%);
 
 $textGrey: #757575;
 $textDarkGrey: #1d1d1d;
