--- a/resources/sass/pages/_homePage.scss
+++ b/resources/sass/pages/_homePage.scss
@@ -46,11 +46,30 @@
             &:before {
                 content: '';
                 position: absolute;
-                background-image: url('/images/icons/faq-data.svg');
                 width: 60px;
                 height: 60px;
                 left: 30px;
                 top: 30px;
+                background-repeat: no-repeat;
+                background-size: contain;
+            }
+
+            &:nth-child(1) {
+                &:before {
+                    background-image: url('/images/icons/faq-data.svg');
+                }
+            }
+
+            &:nth-child(2) {
+                &:before {
+                    background-image: url('/images/icons/faq-terminology.svg');
+                }
+            }
+
+            &:nth-child(3) {
+                &:before {
+                    background-image: url('/images/icons/faq-data.svg');
+                }
             }
 
             @include media-breakpoint-up(lg) {
