--- a/resources/sass/_mixins.scss
+++ b/resources/sass/_mixins.scss
@@ -304,7 +304,7 @@
 }
 
 // Add opacity mask over image
-@mixin mask($bgColor: $brand-1, $opacity: 0.8) {
+@mixin mask($bgColor: $brand-primary-1, $opacity: 0.8) {
     position: relative;
     //overflow: hidden;
 
