--- a/resources/sass/components/_accordion.scss
+++ b/resources/sass/components/_accordion.scss
@@ -90,7 +90,7 @@
             padding: 2rem 6rem 2rem 2rem;
 
             &:hover {
-                color: $brand-1 !important;
+                color: $brand-primary-1 !important;
             }
         }
 
