--- a/resources/sass/layout/_blog.scss
+++ b/resources/sass/layout/_blog.scss
@@ -186,7 +186,7 @@
 
             &:hover {
                 svg path {
-                    fill: $brand-1;
+                    fill: $brand-primary-1;
                 }
             }
         }
