--- a/resources/sass/layout/_header.scss
+++ b/resources/sass/layout/_header.scss
@@ -1,5 +1,5 @@
 .header-wrapper {
-    background: $brand-1;
+    background: $brand-primary-1;
     text-align: center;
     @include media-breakpoint-down(md) {
         padding: 10px 0;
@@ -153,7 +153,7 @@
 
 .submenu {
     position: absolute;
-    background: $brand-1;
+    background: $brand-primary-1;
     width: 200px;
     //display:none;
     opacity: 0;
