--- a/resources/sass/mobile/components/_solutionsMobile.scss
+++ b/resources/sass/mobile/components/_solutionsMobile.scss
@@ -3,7 +3,7 @@
     bottom: 0;
     left: 0;
     width: 100%;
-    background-color: $brand-1;
+    background-color: $brand-primary-1;
     z-index: 1040;
     max-height: calc(100vh - 140px);
 
@@ -31,7 +31,7 @@
                     font-weight: 400;
 
                     &:hover {
-                        background-color: darken($brand-1, 5%);
+                        background-color: darken($brand-primary-1, 5%);
                         text-decoration: none;
                     }
                 }
