--- a/resources/sass/_global.scss
+++ b/resources/sass/_global.scss
@@ -90,7 +90,7 @@ body {
         .main-menu {
             overflow-y: scroll;
             overflow-x: hidden;
-            height: calc(100vh - 54px);
+            height: calc(100vh - $mobile-header-height);
         }
     }
 }
