--- a/resources/sass/layout/_header.scss
+++ b/resources/sass/layout/_header.scss
@@ -47,10 +47,10 @@
 .main-nav {
     @include media-breakpoint-down(md) {
         position: fixed;
-        top: 54px;
+        top: $mobile-header-height;
         left: 0;
         width: calc(100% - 2rem);
-        height: calc(100vh - 54px);
+        height: calc(100vh - #{$mobile-header-height});
         background-color: #fff;
         z-index: 2000;
         transform: translate3d(-100%, 0, 0);
