--- a/resources/sass/pages/_resultsPage.scss
+++ b/resources/sass/pages/_resultsPage.scss
@@ -605,13 +605,14 @@
 
     .filter-parent {
         padding-top: 1rem;
+        padding-bottom: 1rem;
         transform: translate3d(-100%, 0, 0);
         overflow: scroll;
         position: fixed;
-        top: 54px;
+        top: $mobile-header-height;
         left: 0;
         width: 100%;
-        height: calc(100vh - 54px);
+        height: calc(100vh - $mobile-header-height);
         background-color: #fff;
         z-index: 2000;
         transition: $transition;
