Toggle text on show filters buttons

--- a/resources/sass/components/basic/_button.scss
+++ b/resources/sass/components/basic/_button.scss
@@ -72,6 +72,14 @@
         }
     }
 
+    &.btn-grey {
+        background-color: $brand-primary-7;
+
+        &:hover {
+            background-color: $brand-secondary-3;
+        }
+    }
+
     &.btn-squared {
         border-radius: $border-radius;
         padding: 15px 26px;
