Fix IE bug with z-index of search form

--- a/resources/sass/pages/_resultsPage.scss
+++ b/resources/sass/pages/_resultsPage.scss
@@ -39,6 +39,7 @@
         left: 0;
         right: 0;
         width: 100%;
+        position: relative;
         z-index: 1035;
 
         &.js-is-sticky,
