Fix bug with close button getting cut off

--- a/resources/sass/components/_modal.scss
+++ b/resources/sass/components/_modal.scss
@@ -15,10 +15,10 @@
         .modal-copy {
             @include font-size(16);
         }
-
-        .modal-content {
-            overflow: hidden;
-        }
+        //
+        //.modal-content {
+        //    overflow: hidden;
+        //}
 
         .modal-dialog {
             //width: 100%;
