--- a/resources/sass/components/_banner.scss
+++ b/resources/sass/components/_banner.scss
@@ -230,17 +230,23 @@
     @media (min-width: 1200px){
         min-width: 1028px;
 
-        .dropdown-toggle,
-        #input_postcode {
-            min-width: 230px;
-            max-width: 230px;
+        //.dropdown-toggle,
+        //#input_postcode {
+        //    min-width: 230px;
+        //    max-width: 230px;
+        //}
+    }
+
+    form {
+        > * {
+            flex-basis: percentage(1/3);
         }
     }
 
     .dropdown-toggle,
     #input_postcode,
     #submit_search {
-        max-height: 57px;
+        max-height: 55px;
     }
 
     .form-child {
@@ -249,9 +255,9 @@
         }
     }
 
-    #submit_search {
-        width: 100%;
-    }
+    //#submit_search {
+    //    width: 100%;
+    //}
 
     // Search form in horizontal arrangement
     .search-form-row {
