--- a/resources/sass/components/_form.scss
+++ b/resources/sass/components/_form.scss
@@ -33,7 +33,7 @@ input:not([type="range"]):not([type="submit"]):not([type="checkbox"]),
 select:not([class^="ui-datepicker"]),
 textarea {
     border: 2px solid $border-color; /*Removes border*/
-    border-radius: $border-radius;
+    border-radius: $btn-border-radius;
     appearance: none;
     //color: $textGrey;
     background-color: $white;
@@ -43,11 +43,6 @@ textarea {
 
 select::-ms-expand {
     display: none;
-}
-
-.select-wrapper {
-    //padding-left: 0;
-    //overflow: hidden;
 }
 
 // Homepage banner form
@@ -131,7 +126,7 @@ select::-ms-expand {
     textarea {
         //height: 35px;
         //line-height: 44px;
-        border-radius: $border-radius;
+        border-radius: $btn-border-radius;
         background-color: #ffffff;
     }
 
@@ -219,7 +214,7 @@ select::-ms-expand {
 
 textarea {
     width: 100%;
-    border-radius: $border-radius;
+    border-radius: $btn-border-radius;
     background-color: #ffffff;
     padding: 1rem;
     padding-top: 7px;
