--- a/resources/sass/components/basic/_button.scss
+++ b/resources/sass/components/basic/_button.scss
@@ -81,7 +81,7 @@
     }
 
     &.btn-squared {
-        border-radius: $border-radius;
+        border-radius: $btn-border-radius;
         padding: 15px 26px;
         @include media-breakpoint-up(md) {
             padding: 25px 56px;
@@ -164,18 +164,6 @@
             background-color: $pink;
         }
     }
-
-    &.btn-read-more {
-        border-radius: 50px;
-        color: #fff;
-        @include font-size(22);
-        background: #ed0373;
-        background: linear-gradient(-90deg, $pink, $pink, #649ef7, #649ef7, $blue, $blue);
-        background-size: 300% 100%;
-        transition: 0.6s;
-        padding: 7px 25px;
-    }
-
 }
 
 
