--- a/resources/sass/components/basic/_select.scss
+++ b/resources/sass/components/basic/_select.scss
@@ -11,7 +11,7 @@
         color: $textGrey;
         font-weight: 500;
         border: 2px solid $border-color;
-        border-radius: $border-radius;
+        border-radius: $btn-border-radius;
 
         &:after {
             display: none;
