carousel control opacity

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -168,6 +168,8 @@ $carousel-control-icon-width: 40px;
 $carousel-control-icon-height: 40px;
 $carousel-control-opacity: 1;
 $carousel-control-width: auto;
+$carousel-control-opacity: 1;
+$carousel-control-hover-opacity: 1;
 
 // Pagination
 $pagination-link-height: 35px;
